# learningLinux

./: CMakeLists.txt
src/: learningLinux_bin.c  learningLinux_text.sh
